	  session.

	Gadu-Gadu:
	* Fix buffer overflow with remote code execution potential. Only
	  triggerable by a Gadu-Gadu server or a man-in-the-middle.
	  (Discovered by Yves Younan and Ryan Pentney of Sourcefire VRT)
	  (CVE-2013-6487)
	* Disabled buddy list import/export from/to server (it didn't work
	  anymore). Buddy list synchronization will be implemented in 3.0.0.

	IRC:
	* Fix bug where initial IRC status would not be set correctly.
	* Fix bug where IRC wasn't available when libpurple was compiled with
	  Cyrus SASL support. (#15517)

	MSN:
	* Fix NULL pointer dereference parsing headers in MSN.
	  (Discovered by Fabian Yamaguchi and Christian Wressnegger of the
	  University of Goettingen) (CVE-2013-6482)
	* Fix NULL pointer dereference parsing OIM data in MSN.
	  (Discovered by Fabian Yamaguchi and Christian Wressnegger of the
	  University of Goettingen) (CVE-2013-6482)
	* Fix NULL pointer dereference parsing SOAP data in MSN.
	  (Discovered by Fabian Yamaguchi and Christian Wressnegger of the
	  University of Goettingen) (CVE-2013-6482)
	* Fix possible crash when sending very long messages. Not
	  remotely-triggerable. (Discovered by Matt Jones, Volvent)

	MXit:
	* Fix buffer overflow with remote code execution potential.
	  (Discovered by Yves Younan and Pawel Janic of Sourcefire VRT)
	  (CVE-2013-6487)
	* Fix sporadic crashes that can happen after user is disconnected.
	* Fix crash when attempting to add a contact via search results.
	* Show error message if file transfer fails.
	* Fix compiling with InstantBird.
	* Fix display of some custom emoticons.

	SILC:
	* Correctly set whiteboard dimensions in whiteboard sessions.

	SIMPLE:
	* Fix buffer overflow with remote code execution potential.
	  (Discovered by Yves Younan of Sourcefire VRT) (CVE-2013-6487)

	XMPP:
	* Prevent spoofing of iq replies by verifying that the 'from' address
	  matches the 'to' address of the iq request. (Discovered by Fabian